--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,142 @@
 
 /* Your CSS Code here. */
+html {
+  box-sizing: border-box;
+  -webkit-user-select: none;
+  /* Chrome all / Safari all */
+  -moz-user-select: none;
+  /* Firefox all */
+  -ms-user-select: none;
+  /* IE 10+ */
+  user-select: none;
+  /* Likely future */
+}
+
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
+}
+
+b {
+  font-weight: bold;
+}
+
+
+/* main app styles */
+
+body {
+  width: 400px;
+  margin: 0 auto;
+  font-family: 'Source Sans Pro', sans-serif;
+  color: #111;
+}
+
+.container {
+  margin: 2% auto;
+  padding: 15px;
+}
+
+
+textarea {
+  width: 100%;
+  height: 40px;
+  padding: 10px;
+  border: 1px solid #d9d9d9;
+  outline: none;
+  font-size: 1rem;
+  resize: none;
+  line-height: 1.5rem;
+}
+
+textarea:hover {
+  border-color: #C0C0C0;
+}
+
+textarea:focus {
+  border-color: #4D90FE;
+}
+
+.output.row {
+  width: 100%;
+  border: 1px solid #DDD;
+  font-size: 1.4rem;
+  margin: 1% 0;
+  background-color: #F9F9F9;
+}
+
+.output.row div {
+  display: inline-block;
+  width: 42%;
+  padding: 10px 15px;
+  margin: 1%;
+}
+
+.output.row span {
+  font-weight: bold;
+  font-size: 1.5rem;
+}
+
+#readability {
+  width: 52%;
+  font-weight: bold;
+}
+
+#readability:active {
+  background-color: #307AF3;
+}
+
+.keywords {
+  display: none;
+  margin: 4% 0 0;
+  font-size: 2rem;
+  font-weight: 900;
+}
+
+
+/* 
+** Making it responsive
+*/
+
+@media (max-width: 750px) {
+  body {
+    width: 600px;
+  }
+  .output.row {
+    font-size: 1.2rem;
+  }
+  .output.row span {
+    font-size: 1.3rem;
+  }
+  
+}
+
+@media (max-width: 600px) {
+  /* rewriting old styles */
+  body {
+    width: 95%;
+  }
+  .output.row {
+    border: none;
+    background-color: #FFF;
+  }
+  .output.row div {
+    display: block;
+    width: 50%;
+    padding: 10px 15px;
+    margin: 2% auto;
+    border: 1px solid #DDD;
+    font-size: 1.8rem;
+    background-color: #F9F9F9;
+  }
+  .output.row span {
+    font-size: 2rem;
+  }
+  #readability {
+    width: 100%;
+    font-size: 1.6rem;
+    font-weight: 400;
+  }
+  .keywords {
+    margin: 10% auto;
+  }
